Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8132149

[WebView] not reporting device scale factor to a web service

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3
    • 9
    • 8u40, 8u60, 9
    • javafx
    • None
    • web

    Backports

      Description

        In particular, google maps look blurry in WebView on MBP Retina, unlike in Safari 7 where the maps look sharp.

        Attachments

          Issue Links

            Activity

              People

                ant Anton Tarasov
                ant Anton Tarasov
                Votes:
                0 Vote for this issue
                Watchers:
                5 Start watching this issue

                Dates

                  Created:
                  Updated:
                  Resolved: