8132149: [WebView] not reporting device scale factor to a web service

Reviewed-by: flar