modules/web/src/main/java/com/sun/webkit/graphics/WCGraphicsManager.java
@@ -56,6 +56,8 @@ public abstract class WCGraphicsManager {
     public static WCGraphicsManager getGraphicsManager() {
         return manager;
     }
+    
+    public abstract float getDevicePixelScale();
 
     protected abstract WCImageDecoder getImageDecoder();
 
